--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.44</version>
 		</dependency>
+	  <dependency>
+		  <groupId>com.thetransactioncompany</groupId>
+		  <artifactId>cors-filter</artifactId>
+		  <version>2.5</version>
+	  </dependency>
   </dependencies>
   <build>
     <finalName>lawbase</finalName>
